# astrophotography

./: .gitignore  README.md  gphoto.sh  main.py  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
ai/: .env.template  main.py  quantized_inference.py  requirements.txt
archived/image-processing/: playground.ipynb
archived/image-processing/ngc 7000/: catalog.ipynb  notebook.ipynb
archived/image-processing/search/: notebook.ipynb
archived/image-processing/stacking/: align_and_drizzle.py  registration.ipynb
archived/ip/: environment.yml
archived/ip/ip/: pipeline.py
archived/ip/ip/domain_models/: image.py  telescope.py
archived/ip/ip/tasks/: calibrate.py  io.py
data-analysis/: analyze.py  pyproject.toml  specifications.py
headless-crawler/: crawl.mjs  jest.config.ts  package-lock.json  package.json  product.mjs  router.mjs  store.mjs  store.test.mjs
image-processing/: curriculum.md  environment.yml  main.py  pyproject.toml
image-processing/search/: notebook.ipynb
image-processing/stacking/: generate_test_images.py  search.py
ip/: README.md  run
ip/ip/domain_models/: camera.py
shopping/: readme.md
shopping/data-analysis/: analyze.py  feature_learning.py  preprocessing.py  prices.py  pyproject.toml  raw_data.py  readme.md  specifications.py  topic_clustering.py
shopping/dumb-crawler/: README.md  pyproject.toml
shopping/dumb-crawler/crawler/: items.py
shopping/dumb-crawler/crawler/spiders/: optcorp_products.py
shopping/headless-crawler/: category.mjs  page.mjs  product.mjs  router.mjs
telescope/capture/: gphoto.sh
telescope/symbols/: 2023-09-30_20-37-12.kicad_sym
telescope/symbols/ECS-327TXO-30-TR/: ECS-327TXO-30-TR.step  OSC_ECS-327TXO-30-TR.kicad_mod
telescope/symbols/PMCF8316A1VRGFR/footprints.pretty/: QFN_A1VRGFR_TEX-L.kicad_mod
telescope/symbols/footprints.pretty/: QFN_A1VRGFR_TEX-M.kicad_mod
telescope/telescope/: Buck.kicad_sch  telescope.kicad_pcb  telescope.kicad_prl  telescope.kicad_pro  telescope.kicad_sch
telescope/tracking-mount/: README.md  direct torque control.ipynb  environment.yml
telescope/tracking-mount/CIRCUITPY/: code.py
telescope/tracking-mount/controller/: Buck.kicad_sch  TCXO.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  telescope.kicad_pro
telescope/tracking-mount/controller/symbols/ECS-327TXO-30-TR/: ECS-327TXO-30-TR.kicad_sym
telescope/tracking-mount/controller/symbols/PMCF8316A1VRGFR/footprints.pretty/: QFN_A1VRGFR_TEX.kicad_mod
telescope/tracking-mount/controller/symbols/SIT1552AI-JF-DCC-32.768D/: 2023-10-02_04-31-40.kicad_sym
telescope/tracking-mount/controller/symbols/SIT1552AI-JF-DCC-32.768D/footprints.pretty/: BGA4_SiT1532_SIT.kicad_mod
telescope/vision/vision/: Cargo.toml  README.md  build.rs  build_project.rs
telescope/vision/vision/src/: main.rs
