[tool.poetry]
name = "astrophotography"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
rawpy = "^0.17.3"
matplotlib = "^3.6.3"
pyqt6 = "^6.4.1"
pyqt5 = "^5.15.8"
opencv-python = "^4.7.0.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

