[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = ""
authors = ["John Syrinek <john.syrinek@gmail.com>"]
readme = "README.md"
packages = [{include = "data_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
pyqt5 = "^5.15.9"
seaborn = "^0.12.2"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
