[tool.poetry]
name = "image-processing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
rawpy = "^0.17.3"
matplotlib = "^3.6.3"
pyqt5 = "^5.15.8"
pandas = "^1.5.3"
parallel-pandas = "^0.5.0"
opencv-python-headless = "^4.7.0.68"
seaborn = "^0.12.2"
scikit-image = "^0.19.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

