[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = ""
authors = ["John Syrinek <john.syrinek@gmail.com>"]
readme = "README.md"
packages = [{ include = "." }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
pyqt5 = "^5.15.9"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"
llvmlite = "^0.39.1"
hdbscan = "^0.8.29"
top2vec = { extras = ["sentence-encoders"], version = "^1.0.28" }
nvidia-cuda-runtime-cu12 = "^12.1.55"
tf-gpu = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
