[package]
name = "vision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[dependencies]
actix-web = "3.1.0"
libcamera = "0.2.2"
bindgen = "0.68.1"

